tests/build/widget_new/missing_value5.stderr
error: expected property value
 --> $DIR/missing_value5.rs:7:9
  |
7 |         #[allow(unused_imports)]
  |         ^

warning: unused import: `cursor`
 --> $DIR/missing_value5.rs:1:27
  |
1 | use zero_ui::properties::{cursor, margin};
  |                           ^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `zero_ui::core::units::PxPoint`
 --> $DIR/missing_value5.rs:9:17
  |
9 |             use zero_ui::core::units::PxPoint;
  |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
